--- a/index.html
+++ b/index.html
@@ -2,14 +2,91 @@
 layout: default
 title: Homepage
 ---
-<h1>Welcome to your homepage!</h1>
 
-Aber
+<header class="bg-image bg-image-roof bg-overlay padded vh-70 grid-middle">
+    <div class="col-12 text-center">
+        <h1 class="white-text"> The Bunker</h1>
+    </div>
+</header>
 
-<p> muss ich </p>
+<!-- Dark intro section -->
+<section class="bg-dark grid padded">
+        <div class="col-6_sm-12 bg-image bg-image-bed bg-padded vh-50"> </div>
+        <div class="col-6_sm-12-middle padded2">
+            <h2> Lux.</h2>
+            <p> Welcome to The Bunker, where sophistication meets comfort. Our meticulously designed spaces promise a blend of elegance and modernity. Discover a sanctuary where every detail is crafted to offer an exceptional stay.</p>
+            </p>
+            <p>
+            Immerse yourself in the serene atmosphere of our luxurious rooms, designed to provide ultimate relaxation and tranquility.
+            </p>
+    </div>
+</section>
 
-`ddddd` 
+<!-- Opening banner -->
 
-*wie funkt* 
+<section class="bg-image bg-image-hall padded vh-50 grid-middle">
+    <div class="col-12 text-center">
+        <h2 class="white-text"> Opening Mid Augusts</h2>
+        <h3 class="white-text"> 2025</h3>
+    </div>
+</section>
 
-## *jjddd*
+<!-- Features  about blocks -->
+
+<section class="grid">
+    <div class="col-6-middle_sm-12 padded sm-padded-lg">
+        <h2> Lobby Dreams</h2>
+        <p> Discover the heart of our hotel in the stunning lobby, where contemporary design and classic comfort converge. Our spacious lounge area, with its chic decor and cozy seating, offers a perfect blend of style and relaxation, welcoming you to a world of refined luxury.
+        </p>
+    </div>
+    <div class="col-6_sm-12 bg-image bg-image-libary bg-padded vh-50"></div>
+</section>
+
+<section class="grid flex-flip_sm">
+    <div class="col-6_sm-12 bg-image bg-image-chair bg-padded vh-50"></div>
+    <div class="col-6-middle_sm-12 padded sm-padded-lg">
+        <h2> The Bunker Bar</h2>
+        <p> Enjoy an evening of relaxation and indulgence at The Bunker Bar. Our carefully curated selection of fine wines, crafted cocktails, all sorts of Craft Beers and gourmet snacks offers a sophisticated setting for you to unwind.</p>
+    </div>
+</section>
+
+<section class="grid">
+    <div class="col-6-middle_sm-12 padded sm-padded-lg">
+        <h2> Fall in Love</h2>
+        <p> From intimate moments to grand celebrations, our hotel provides the perfect backdrop. Experience a blend of luxury and comfort that will make you fall in love with every aspect of your stay.</p>
+    </div>
+    <div class="col-6_sm-12 hide_sm bg-image bg-image-bedsheet bg-padded vh-50"></div>
+</section>
+
+<!-- Social Links -->
+<section class="social-banner bg-image bg-image-roof grid-middle vh-20 padded10">
+    <div class="col-12 text-right">
+        <h2 class="white-text"> Hit us up on socials</h2>
+        <nav>
+            <a href="#"> <i class="fa-brands fa-pinterest-p"></i></a>
+            <a href="#"> <i class="fa-brands fa-instagram"></i></a>
+            <a href="#"> <i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"> <i class="fa-brands fa-x-twitter"></i></a>
+        </nav>
+    </div>
+</section>
+
+<!-- Map -->
+<section class="bg-image bg-image-map bg-padded vh-50">
+</section>
+
+<!-- Footer -->
+<footer class="grid-middle bg-dark padded-1 vh-50">
+    <div class="col-6_sm-12 padded2">
+        <h2 class="logo"> The Bunker</h2>
+    </div>
+    <div class="col-6_sm-12 padded2 text-right">
+        <h4> Stay with us</h4>
+        <p> <a href="#">100 Main Street, Sydney </a> </p> 
+        <p> <a href="mailto:hello@thebunker.com">Mail: hello@thebunker.com</a></p>
+        <p> <a href="tel:180055555">Tel: 180055555</a></p>
+    </div>
+    <div class="col-12 white-text text-center">
+        <a href="https://onememorydesign.com" class="text-center copyright">© 2025 OnememoryDesign.</a>
+    </div>
+</footer>
