--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@ title: Homepage
 <section class="bg-dark grid padded">
         <div class="col-6_sm-12 bg-image bg-image-bed bg-padded vh-50"> </div>
         <div class="col-6_sm-12-middle padded2">
-            <h2> Lux.</h2>
-            <p> Welcome to The Bunker, where sophistication meets comfort. Our meticulously designed spaces promise a blend of elegance and modernity. Discover a sanctuary where every detail is crafted to offer an exceptional stay.</p>
-            </p>
-            <p>
-            Immerse yourself in the serene atmosphere of our luxurious rooms, designed to provide ultimate relaxation and tranquility.
-            </p>
+            <h2>{{ page.intro_title }}</h2> <!-- Dynamischer Titel -->
+            <p>{{ page.intro_text }}</p> <!-- Dynamischer Text -->
+            <p>{{ page.intro_subtext }}</p> <!-- Dynamischer Untertext -->
     </div>
 </section>
 
