Update Seiten “index”

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Homepage
+intro_title: Lux
+intro_text: We'll do this and that so you think its awsome!
+intro_subtext: Just everything amazing!
 ---
 
 <header class="bg-image bg-image-roof bg-overlay padded vh-70 grid-middle">
