--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 ---
 layout: default
 title: Homepage
-intro_title: "Lux."
-intro_text: "Welcome to The Bunker, where sophistication meets comfort. Our meticulously designed spaces promise a blend of elegance and modernity. Discover a sanctuary where every detail is crafted to offer an exceptional stay."
-intro_subtext: "Immerse yourself in the serene atmosphere of our luxurious rooms, designed to provide ultimate relaxation and tranquility."
-bg-image-roof: "/images/the-bunker-5.jpg"
-bg-image-bed: "/images/the-bunker-1.jpg"
+intro_title: Lux.
+intro_text: Welcome to The Bunker, where sophistication meets comfort. Our
+  meticulously designed spaces promise a blend of elegance and modernity.
+  Discover a sanctuary where every detail is crafted to offer an exceptional
+  stay.
+intro_subtext: Immerse yourself in the serene atmosphere of our luxurious rooms,
+  designed to provide ultimate relaxation and tranquility.
+bg-image-roof: /images/the-bunker-5.jpg
+bg-image-bed: /images/uploads/patrick.webp
 ---
 
 
