Update Seiten “index”

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ intro_text: Welcome to The Bunker, where sophistication meets comfort. Our
 intro_subtext: Immerse yourself in the serene atmosphere of our luxurious rooms,
   designed to provide ultimate relaxation and tranquility.
 bg-image-roof: /images/the-bunker-5.jpg
-bg-image-bed: /images/uploads/patrick.webp
+bg-image-bed: /images/uploads/egor-litvinov-d9w2_nh9cdq-unsplash.jpg
 ---
 
 
