Update Seiten “index”

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ intro_text: Welcome to The Bunker, where sophistication meets comfort. Our
   stay.
 intro_subtext: Immerse yourself in the serene atmosphere of our luxurious rooms,
   designed to provide ultimate relaxation and tranquility.
-bg-image-roof: /images/the-bunker-5.jpg
+bg-image-roof: /images/sam-quek-mkktb0hu3wu-unsplash.jpg
 bg-image-bed: /images/egor-litvinov-d9w2_nh9cdq-unsplash.jpg
 ---
 
