--- a/admin/index.html
+++ b/admin/index.html
@@ -12,6 +12,8 @@
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
+    <!-- Include the script that forms a preview -->
     <script src="cms-preview.js"></script>
 
   </body>
